finishing the app

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,5 +1,5 @@
 .background-cointainer-home {
-    height: 550px;
+    height: 50vh;
     background-image: url('./bannerbackground.png');
     background-repeat: no-repeat;
     background-position: center;
